--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,10 +20,10 @@
 	<div class="footer">
         <footer>
             <div class="social">
-                <a href="#"><i class="icon ion-social-instagram"></i></a>
-                <a href="#"><i class="icon ion-social-facebook"></i></a>
+                <a href="https://www.instagram.com/edinburghuniversityhoppers/"><i class="icon ion-social-instagram"></i></a>
+                <a href="https://www.facebook.com/groups/206089249488155"><i class="icon ion-social-facebook"></i></a>
                 <a href="mailto:adahack21@gmail.com"><i class="icon ion-email"></i></a>
-                <a href="#"><i class="icon ion-social-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UC8kHxhiU2BHaKPQThGRtFfQ"><i class="icon ion-social-youtube"></i></a>
                 <a href="#"><i class="icon ion-android-globe"></i></a>
             </div>
             <p class="copyright">Made with <3 by Hoppers</p>
