--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,11 +1,11 @@
 
-<script src="./PapaParse-5.0.2/papaparse.min.js"></script>
+<script src="{{ '/PapaParse-5.0.2/papaparse.min.js'|relative_url}}"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-<script src="../moment.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script>
 
   var link = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSr00JMiSuM4qKHfChtIHrdxzf9OPOtA3XsFPLsXnuRDJ1DS2YHWoJU_qPUY5dFeFUBa-diUj60JaVk/pub?output=csv'           // this link should be replaced with the link retrieved earlier
